k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: advert-back
  labels:
    managed-by: argocd
