k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advert-back
  namespace: advert-back
  labels:
    app: advert-back
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: advert-back
  template:
    metadata:
      labels:
        app: advert-back
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: advert-back
          image: ghcr.io/nulp-ai-enterprise/advert-back:sha-43334aa
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 15
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 5
