k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: advert-back
  namespace: advert-back
  labels:
    app: advert-back
spec:
  type: ClusterIP
  selector:
    app: advert-back
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
