k8s/ingress-ws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advert-back-ws
  namespace: advert-back
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: advert.thesis-i.com
      http:
        paths:
          - path: /api/ws
            pathType: Prefix
            backend:
              service:
                name: advert-back
                port:
                  number: 8080
