k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advert-back
  namespace: advert-back
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: advert-back.thesis-i.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: advert-back
                port:
                  number: 8080
